# Neurosymbolic-LLM-tutorials

./: README.md  main.py  pyproject.toml  tutorial_1_foundation_llm.ipynb
notebooks/: 3d_objects_knowledge_graph.json-ld  3d_objects_knowledge_graph.ttl  3d_objects_knowledge_graph.xml  tutorial_3_symbolic_reasoning.ipynb  tutorial_4_knowledge_graph.ipynb  tutorial_5_integrated_neurosymbolic.ipynb
