[project]
name = "neurosymbolic-llm-tutorials"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "numpy>=2.2.4",
    "opencv-python>=4.11.0.86",
    "pillow>=11.1.0",
    "rdflib>=7.1.4",
    "requests>=2.32.3",
    "timm>=1.0.15",
    "torch>=2.6.0",
    "transformers>=4.50.3",
]
